# self-reflection

./: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.kiro/specs/agent-test-scripts/: design.md  requirements.md  tasks.md
.kiro/specs/curator-agent/: design.md  requirements.md  tasks.md
.kiro/specs/generator-agent/: design.md  requirements.md  tasks.md
.kiro/specs/jcommonsenseqa-dataset-loader/: design.md  requirements.md  tasks.md
.kiro/specs/reflector-agent/: design.md  requirements.md  tasks.md
.kiro/specs/self-reflection-system/: design.md  requirements.md  tasks.md
.kiro/specs/yaml-llm-config/: design.md  requirements.md  tasks.md
.kiro/steering/: coding-standards.md  language.md  product.md  structure.md  tech.md
config/: app.yaml  sections.yaml
data/playbooks/: appworld.json  jcommonsenseqa.json  test_dataset.json
prompts/curator/: default.txt
prompts/generator/: default.txt
prompts/reflector/: bullet_evaluation.txt  default.txt
src/: __init__.py  main.py
src/application/: __init__.py
src/application/agents/: __init__.py  curator.py  generator.py  reflector.py
src/application/services/: __init__.py
src/application/workflows/: __init__.py  reflection_workflow.py
src/common/config/: app_config_loader.py  section_loader.py  settings.py
src/common/defs/: __init__.py  curation.py  insight.py  (+1 more)
src/scripts/: __init__.py  fetch_jcommonsenseqa.py  run_curator.py  run_generator.py  run_reflector.py  run_workflow.py  verify_system.py
tests/: test_llm_config.py
(+21 files in other folders)
