[project]
name = "reflection"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "numpy==2.4.2",
  "pandas==3.0.0",
  "pyarrow==23.0.0",
  "matplotlib==3.10.8",
  "seaborn==0.13.2",
  "pandas-datareader==0.10.0",
  "mplfinance==0.12.10b0",
  "langchain==1.2.8",
  "langgraph==1.0.7",
  "langchain-openai==1.1.7",
  "langchain-aws==1.2.2",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "langgraph-checkpoint==4.0.0",
  "langgraph-checkpoint-sqlite==3.0.3",
  "fastapi==0.128.1",
  "uvicorn[standard]==0.40.0",
  "dependency-injector==4.48.3",
  "pyyaml==6.0.3",
  "rank-bm25==0.2.2",
]


[project.optional-dependencies]
dev = [
  "ruff",
  "ipykernel",
  "pytest",
  "pytest-asyncio",
  "httpx",
]
